Begin reorganizing modules to make launcher just another editor